Creación de la API obtener un plato por su ID
